tests/urmoac/input/wkt/errors/point_missing_id/destinations.wkt
#id;pos;[var]
;POINT(-200 0)
